First 4 tasks of issue 101

--- a/02_setup_k8s/tasks/01_user_setup.yml
+++ b/02_setup_k8s/tasks/01_user_setup.yml
@@ -83,7 +83,7 @@
   stat: path={{ copy_local_key }}
   register: result
   become: no
-  when: not (root_login.unreachable is defined)
+  # when: not (root_login.unreachable is defined)
 
 - name: "Fail if root cannot login with password or ssh key."
   fail:
