--- a/02_setup_k8s/tasks/04_save_kubeconfig.yml
+++ b/02_setup_k8s/tasks/04_save_kubeconfig.yml
@@ -26,8 +26,8 @@
 - name: Change file ownership, group and permissions of kubeconfig-file
   ansible.builtin.file:
     path: "~/.kube/{{ kubeconfig_file }}"
-    owner: acn
-    group: acn
+    owner: "{{ working_user }}"
+    group: "{{ working_group }}"
     mode: '0600'
   delegate_to: localhost
   become: no
