--- a/03_setup_k8s_platform/tasks/idm-stack/idm-config/keycloak_0_deploy_secrets.yml
+++ b/03_setup_k8s_platform/tasks/idm-stack/idm-config/keycloak_0_deploy_secrets.yml
@@ -6,7 +6,7 @@
 - name: Get Keycloak Postgres credentials
   k8s_info:
     kind: Secret
-    namespace: '{{ k8s_namespace }}'
+    namespace: '{{ k8s_namespace }}-db'
     kubeconfig: '{{ k8s_config }}'
     context: "{{ k8s_context }}"
     name: '{{ IDM_DB_ADMIN_SECRET_NAME }}'
@@ -15,8 +15,8 @@
 - name: Store Keycloak Postgres Admin Credentials
   set_fact:
     KEYCLOAK_POSTGRES_DATABASE: "{{ common.kc_db_name | b64encode }}"
-    KEYCLOAK_POSTGRES_EXTERNAL_ADDRESS: "{{ (( postgresql.cluster_team + '.' + postgresql.cluster_name + '.' + k8s_namespace + '.' + DOMAIN ) | b64encode ) }}"
-    KEYCLOAK_POSTGRES_HOST: "{{ (( postgresql.cluster_team + '.' + postgresql.cluster_name + '.' + k8s_namespace ) | b64encode ) }}"
+    KEYCLOAK_POSTGRES_EXTERNAL_ADDRESS: "{{ (( postgresql.cluster_team + '-' + postgresql.cluster_name + '.' + k8s_namespace + '-db.svc.cluster.local' ) | b64encode ) }}"
+    KEYCLOAK_POSTGRES_HOST: "{{ (( postgresql.cluster_team + '-' + postgresql.cluster_name + '.' + k8s_namespace + '-db' ) | b64encode ) }}"
     KEYCLOAK_POSTGRES_PASSWORD: "{{ keycloak_db_admin.resources[0].data.password }}"
     KEYCLOAK_POSTGRES_USERNAME: "{{ keycloak_db_admin.resources[0].data.username }}"
 
