--- a/03_setup_k8s_platform/deploy_postgres_operator.yml
+++ b/03_setup_k8s_platform/deploy_postgres_operator.yml
@@ -3,6 +3,9 @@
   hosts: localhost
   gather_facts: false
 
+  vars_files:
+    - vars/default.yml
+
   tasks:
     - name: Read default values
       ansible.builtin.include_vars:
