--- a/03_setup_k8s_platform/tasks/idm-stack/install_keycloak_operator.yml
+++ b/03_setup_k8s_platform/tasks/idm-stack/install_keycloak_operator.yml
@@ -20,24 +20,24 @@
 
 - name: Deploy role for KeyCloak Operator
   ansible.builtin.shell: |
-      kubectl --kubeconfig="{{ k8s_config }}" --namespace="{{ k8s_namespace }}" apply -f "{{ keycloak_op.git_repo_dest }}/deploy/role.yaml"
+      kubectl --kubeconfig="{{ k8s_config }}" --namespace="{{ k8s_operator_namespace }}" apply -f "{{ keycloak_op.git_repo_dest }}/deploy/role.yaml"
   args:
     executable: /bin/bash
 
 - name: Deploy role binding for KeyCloak Operator
   ansible.builtin.shell: |
-      kubectl --kubeconfig="{{ k8s_config }}" --namespace="{{ k8s_namespace }}" apply -f "{{ keycloak_op.git_repo_dest }}/deploy/role_binding.yaml"
+      kubectl --kubeconfig="{{ k8s_config }}" --namespace="{{ k8s_operator_namespace }}" apply -f "{{ keycloak_op.git_repo_dest }}/deploy/role_binding.yaml"
   args:
     executable: /bin/bash
 
 - name: Deploy service account for KeyCloak Operator
   ansible.builtin.shell: |
-      kubectl --kubeconfig="{{ k8s_config }}" --namespace="{{ k8s_namespace }}" apply -f "{{ keycloak_op.git_repo_dest }}/deploy/service_account.yaml"
+      kubectl --kubeconfig="{{ k8s_config }}" --namespace="{{ k8s_operator_namespace }}" apply -f "{{ keycloak_op.git_repo_dest }}/deploy/service_account.yaml"
   args:
     executable: /bin/bash
 
 - name: Deploy KeyCloak Operator
   ansible.builtin.shell: |
-      kubectl --kubeconfig="{{ k8s_config }}" --namespace="{{ k8s_namespace }}" apply -f "{{ keycloak_op.git_repo_dest }}/deploy/operator.yaml"
+      kubectl --kubeconfig="{{ k8s_config }}" --namespace="{{ k8s_operator_namespace }}" apply -f "{{ keycloak_op.git_repo_dest }}/deploy/operator.yaml"
   args:
     executable: /bin/bash
