--- a/03_setup_k8s_platform/tasks/idm-stack/setup_keycloak_db.yml
+++ b/03_setup_k8s_platform/tasks/idm-stack/setup_keycloak_db.yml
@@ -17,7 +17,7 @@
       apiVersion: "acid.zalan.do/v1"
       metadata:
         name: "{{ postgresql.cluster_team }}-{{ postgresql.cluster_name }}"
-        namespace: "{{ k8s_namespace }}"
+        namespace: "{{ k8s_namespace }}-db"
         labels:
           team: "{{ postgresql.cluster_team }}"
       spec:
@@ -25,7 +25,7 @@
         postgresql:
           version: "{{ postgresql.version }}"
         numberOfInstances: 2
-        enableMasterLoadBalancer: true
+        enableMasterLoadBalancer: false
         volume:
           size: "{{ postgresql.volume_size }}"
         users:
