--- a/03_setup_k8s_platform/templates/keycloak/deployment/keycloak-ingress.yaml
+++ b/03_setup_k8s_platform/templates/keycloak/deployment/keycloak-ingress.yaml
@@ -9,6 +9,7 @@ metadata:
     kubernetes.io/ingress.class: "{{ default.K8S_INGRESS_CLASS }}"
     kubernetes.io/tls-acme: "true"
     nginx.ingress.kubernetes.io/backend-protocol: HTTPS
+    nginx.ingress.kubernetes.io/proxy-buffer-size: 10k
     nginx.ingress.kubernetes.io/server-snippet: |2-
 
                             location ~* "^/auth/realms/master/metrics" {
@@ -31,31 +32,3 @@ spec:
             port:
               number: 8443
 
-
-# apiVersion: extensions/v1beta1
-# kind: Ingress
-# metadata:
-#   name: keycloak
-#   labels:
-#     app: keycloak
-#   annotations:
-#     cert-manager.io/cluster-issuer: letsencrypt-prod
-#     nginx.ingress.kubernetes.io/backend-protocol: HTTPS
-#     nginx.ingress.kubernetes.io/server-snippet: |2-
-
-#                             location ~* "^/auth/realms/master/metrics" {
-#                                 return 301 /auth/realms/master;
-#                               }
-# spec:
-#   tls:
-#     - hosts:
-#         - '{{ keycloak.ingress_tls_host }}'
-#       secretName: "{{ keycloak.ingress_secert_name }}"
-#   rules:
-#   - host: '{{ keycloak.ingress_rules_host }}'
-#     http:
-#       paths:
-#       - path: "/"
-#         backend:
-#           serviceName: keycloak
-#           servicePort: 8443
