--- a/03_setup_k8s_platform/templates/keycloak/deployment/keycloak-secrets.yaml
+++ b/03_setup_k8s_platform/templates/keycloak/deployment/keycloak-secrets.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 data:
   POSTGRES_DATABASE: '{{ KEYCLOAK_POSTGRES_DATABASE }}'
   POSTGRES_EXTERNAL_ADDRESS: '{{ KEYCLOAK_POSTGRES_EXTERNAL_ADDRESS }}'
-  # POSTGRES_EXTERNAL_PORT: NTQzMg==  # 5432
-  POSTGRES_EXTERNAL_PORT: MzEzNTI=  # 31352
+  POSTGRES_EXTERNAL_PORT: NTQzMg==  # 5432
+  # POSTGRES_EXTERNAL_PORT: MzEzNTI=  # 31352
   POSTGRES_HOST: '{{ KEYCLOAK_POSTGRES_HOST }}'
   POSTGRES_PASSWORD: '{{ KEYCLOAK_POSTGRES_PASSWORD }}'
   POSTGRES_SUPERUSER: dHJ1ZQ==
@@ -17,8 +17,8 @@ type: Opaque
 
 apiVersion: v1
 data:
-  MASTER_USERNAME: '{{ keycloak.realm_master_username }}'
-  MASTER_PASSWORD: '{{ keycloak.realm_master_password }}'
+  MASTER_USERNAME: '{{ keycloak.realm_master_username | b64encode}}'
+  MASTER_PASSWORD: '{{ keycloak.realm_master_password | b64encode}}'
 kind: Secret
 metadata:
   name: '{{ IDM_ADMIN_K8S_SECRET_NAME }}'
