--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,10 @@ inventory = inventory
 remote_user = acn
 private_key_file = ${FUTR_HUB_ACN_SSHKEY_PATH}/${FUTR_HUB_ACN_SSHKEY}
 host_key_checking = False
+gathering = smart
+fact_caching = jsonfile
+fact_caching_connection = .facts
+fact_caching_timeout = 0
+
+[ssh_connection]
+scp_if_ssh = True
