--- a/03_setup_k8s_platform/deploy_grafana.yml
+++ b/03_setup_k8s_platform/deploy_grafana.yml
@@ -3,6 +3,9 @@
   hosts: localhost
   gather_facts: false
 
+  vars_files:
+    - vars/default.yml
+
   tasks:
     - name: Read default values
       ansible.builtin.include_vars:
@@ -18,7 +21,7 @@
       ansible.builtin.set_fact:
         k8s_config: "{{ default.K8S_KUBECONFIG }}"
         k8s_context: "{{ default.K8S_CONTEXT }}"
-        k8s_namespace: "{{ default.K8S_NAMESPACE_DATA_MANAGEMENT_OPERATOR }}"
+        k8s_namespace: "{{ default.K8S_NAMESPACE_DATA_MANAGEMENT }}"
         k8s_host: "{{ lookup('env','K8S_MASTER')}}"
 
     - name: Set facts for Grafana Helm chart
