--- a/03_setup_k8s_platform/tasks/idm-stack/idm-config/keycloak_7_groups.yml
+++ b/03_setup_k8s_platform/tasks/idm-stack/idm-config/keycloak_7_groups.yml
@@ -11,3 +11,21 @@
         password: "{{ ADMIN_PASSWORD }}"
     status_code: 200
   register: keycloak_login
+
+- name: Create Default Tenant Group
+  uri:
+    method: POST
+    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/groups"
+    return_content: yes
+    body_format: json
+    body: "{{ lookup('template', 'keycloak/groups/default_tenant.json.j2') }}"
+    headers:
+      Accept: application/json
+      Authorization: Bearer {{ keycloak_login.json.access_token }}
+    status_code: 201,409
+  register: group_default_tenant_response
+
+- name: Check if already existing.
+  debug:
+    msg: "Failed. Group may already exist."
+  when: group_default_tenant_response.status == 409    
