Issue #62: Bugfixing: - Deployment of TimescaleDB now also creates a custom pg_hba.conf: this should resolve issue that QL cannot connect to TimescaleDB. - Deployment of MongoDB: fixed value of parameter "database" and now sets role as "dbOwner" for user $CMS_ORION_MONGODB_USER. - Deployment of Orion: uses Admin credentials to connect to MongoDB: this should resolve issue that Orion cannot connect to MongoDB. - Deployment of QuantumLeap: Added Autoscaler that are part of deployment, used in PB.

--- a/03_setup_k8s_platform/tasks/context_management-stack/install_mongodb.yml
+++ b/03_setup_k8s_platform/tasks/context_management-stack/install_mongodb.yml
@@ -85,11 +85,11 @@
     login_password: "{{ CMS_MONGO_INITDB_ROOT_PASSWORD }}"
     login_host: "127.0.0.1"
     login_port: "{{ mongodb.port }}"
-    database: "admin"
+    database: "{{ CMS_MONGO_INITDB_DATABASE }}"
     name: "{{ CMS_ORION_MONGODB_USER }}"
     password: "{{ CMS_ORION_MONGODB_PASSWORD }}"
     roles:
-      - { db: "{{ CMS_MONGO_INITDB_DATABASE }}", role: "readWrite" }
+      - { db: "{{ CMS_MONGO_INITDB_DATABASE }}", role: "dbOwner" }
 
 - name: Stop kubectl port-forward to MongoDB service
   ansible.builtin.shell: |
