--- a/03_setup_k8s_platform/templates/context_management-stack/quantumleap.yml
+++ b/03_setup_k8s_platform/templates/context_management-stack/quantumleap.yml
@@ -113,6 +113,27 @@ status:
 
 ---
 
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: quantumleap
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: quantumleap
+  minReplicas: 1
+  maxReplicas: 1
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 160
+
+---
+
 # Quantumleap backend
 apiVersion: apps/v1
 kind: Deployment
@@ -164,6 +185,27 @@ spec:
         name: quantumleap-wq
       restartPolicy: Always
 status: {}
+
+---
+
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: quantumleap-wq
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: quantumleap-wq
+  minReplicas: 1
+  maxReplicas: 1
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 160
 
 ---
 
