--- a/03_setup_k8s_platform/deploy_timescale_playbook.yml
+++ b/03_setup_k8s_platform/deploy_timescale_playbook.yml
@@ -52,7 +52,7 @@
             postgresql:
               version: "11"
             numberOfInstances: 2
-            enableMasterLoadBalancer: true
+            enableMasterLoadBalancer: false
             volume:
               size: "20Gi"
             users:
@@ -70,6 +70,18 @@
               limits:
                 cpu: 500m
                 memory: 500Mi
+            patroni:
+              pg_hba:
+                - local     all           all                     trust
+                - hostssl   all           +zalandos 127.0.0.1/32  pam
+                - host      all           all       127.0.0.1/32  md5
+                - hostssl   all           +zalandos ::1/128       pam
+                - host      all           all       ::1/128       md5
+                - hostssl   replication   standby   all           md5
+                - hostnossl all           all       10.0.0.0/8    md5
+                - hostnossl all           all       10.0.0.0/8    pam
+                - hostssl   all           +zalandos all           pam
+                - hostssl   all           all       all           md5
 
     - name: Create timescale extension
       command: |
