--- a/03_setup_k8s_platform/deploy_timescale.yml
+++ b/03_setup_k8s_platform/deploy_timescale.yml
@@ -61,10 +61,6 @@
               quantumleap: []
             databases:
               quantumleap: quantumleap
-            preparedDatabases:
-              quantumleap:
-                extensions:
-                  timescaledb: public
             allowedSourceRanges:
               # IP ranges to access your cluster go here
             resources:
@@ -87,14 +83,14 @@
                 - hostssl   all           +zalandos all           pam
                 - hostssl   all           all       all           md5
 
-    # - name: Create timescale extension
-    #   command: |
-    #     kubectl --kubeconfig {{ k8s_config }} -n {{ k8s_namespace }}
-    #       exec -it {{ timescale.cluster_team }}-{{ timescale.cluster_name }}-0
-    #       -- bash -c "psql -U {{ postgres.super_username }} -d contextdata -c 'CREATE EXTENSION timescaledb;'"
-    #   register: result
-    #   until: result.rc == 0
-    #   retries: 20
-    #   delay: 10
-    #   changed_when: True
+    - name: Create timescale extension
+      command: |
+        kubectl --kubeconfig {{ k8s_config }} -n {{ k8s_namespace }}
+          exec -it {{ timescale.cluster_team }}-{{ timescale.cluster_name }}-0
+          -- bash -c "psql -U {{ postgres.super_username }} -d quantumleap -c 'CREATE EXTENSION timescaledb;'"
+      register: result
+      until: result.rc == 0
+      retries: 20
+      delay: 10
+      changed_when: True
 
